[package]
name = "tide-tracing"
version = "0.0.13"
authors = ["Ethan Brierley <ethanboxx@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = """
A simple middleware for tide using the tracing crate for logging.
"""
keywords = ["tide", "tracing", "logging", "middleware", "opentelemetry"]
documentation = "https://docs.rs/tide-tracing/"
repository = "https://github.com/ethanboxx/tide-tracing"
edition = "2021"
rust-version = "1.63"
exclude = ["*.png"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = { version = "0.16", default-features = false }
tracing = "0.1"
tracing-futures = "0.2"
async-trait = "0.1"

[dev-dependencies]
tide = { version = "0.16", default-features = false, features = ["h1-server"] }
async-std = { version = "1.9", features = ["attributes"] }
tracing-subscriber = "0.3"
